--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   image_picker: ^1.1.2
   flutter_animated_button: ^2.0.3
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
