--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # fvm
-.fvm
 
 # Miscellaneous
 *.class
@@ -44,3 +43,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# FVM Version Cache
+.fvm/
