--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_animated_button: ^2.0.3
   animated_text_kit: ^4.2.2
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
