--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_animated_button: ^2.0.3
   animated_text_kit: ^4.2.2
   carousel_slider: ^5.0.0
+  search_page: ^2.3.0
 
 dev_dependencies:
   flutter_test:
