--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   carousel_slider: ^5.0.0
   search_page: ^2.3.0
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
