--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^5.0.0
   search_page: ^2.3.0
   flutter_slidable: ^3.1.1
+  firebase_core: ^3.8.0
 
 dev_dependencies:
   flutter_test:
