--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   search_page: ^2.3.0
   flutter_slidable: ^3.1.1
   firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.6
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
