--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   google_sign_in: ^6.2.2
   roulette: ^0.2.0
   flutter_staggered_grid_view: ^0.7.0
+  google_maps_flutter: ^2.10.0
+  location: ^7.0.1
+  google_geocoding: ^0.2.0
+  google_places_flutter: ^2.0.9
+  google_place: ^0.4.7
 
 dev_dependencies:
   flutter_test:
