--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^6.2.2
   roulette: ^0.2.0
   flutter_staggered_grid_view: ^0.7.0
+  bottom_bar_matu: ^1.5.0
 
 dev_dependencies:
   flutter_test:
