--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   roulette: ^0.2.0
   flutter_staggered_grid_view: ^0.7.0
   bottom_bar_matu: ^1.5.0
+  floating_draggable_widget: ^2.3.0
 
 dev_dependencies:
   flutter_test:
