--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   bottom_bar_matu: ^1.5.0
   floating_draggable_widget: ^2.3.0
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_test:
