--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   bottom_bar_matu: ^1.5.0
   floating_draggable_widget: ^2.3.0
   adaptive_theme: ^3.6.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
