--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   floating_draggable_widget: ^2.3.0
   adaptive_theme: ^3.6.0
   badges: ^3.1.2
+  dice_bear: ^0.1.5
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
