--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   badges: ^3.1.2
   dice_bear: ^0.1.5
   flutter_svg: ^1.1.6
+  flutter_tags: ^1.0.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
