cicd: Update deploy_flutter_web.yml

--- a/.github/workflows/deploy_flutter_web.yml
+++ b/.github/workflows/deploy_flutter_web.yml
@@ -38,7 +38,7 @@ jobs:
 
       # Build Flutter web
       - name: Build Flutter Web
-        run: flutter build web --release
+        run: flutter build web --release --base-href "/moapp_toto/"
 
       # Upload build artifact
       - name: Upload artifact
